# babico

./: .gitignore  README.md  index.js
go/babico/: go.mod  main.go
go/muslum-baris/: go.mod  main.go
npmjs/babico/: package.json
npmjs/korkmazer/: package.json
npmjs/muslumbaris.korkmazer/: package.json
python/babico/: pyproject.toml
python/babico/babico/: __init__.py  __main__.py
python/korkmazer/: pyproject.toml
python/muslum/: pyproject.toml
python/muslum-baris/: pyproject.toml
python/muslum-baris/muslum_baris/: __init__.py
python/muslumbaris/: pyproject.toml
python/muslumbaris-korkmazer/: pyproject.toml
