[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babico"
version = "1.0.0"
description = "Müslüm Barış Korkmazer – card"
authors = [{ name = "Müslüm Barış Korkmazer", email = "baris@babico.tr" }]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["babico", "card"]

[project.urls]
Homepage = "https://babico.tr"
Repository = "https://github.com/babico/babico"

[project.scripts]
babico = "babico:main"
