[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muslumbaris-korkmazer"
version = "1.0.0"
description = "Müslüm Barış Korkmazer – card"
authors = [{ name = "Müslüm Barış Korkmazer", email = "baris@babico.tr" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["babico"]

[project.urls]
Homepage = "https://babico.tr"
Repository = "https://github.com/babico/babico"

[project.scripts]
muslumbaris-korkmazer = "muslumbaris_korkmazer:main"
